--- a/MDTManagment/MDTManagment/Views/Dentists/AddDentistPage.xaml
+++ b/MDTManagment/MDTManagment/Views/Dentists/AddDentistPage.xaml
@@ -43,25 +43,25 @@
 
 
 
-        <Grid DataContext="{Binding NewDentist}" Grid.Column="1" Grid.Row="0">
-            <TextBox Text="{Binding Path=Name}" Height="20"></TextBox>
+        <Grid Grid.Column="1" Grid.Row="0">
+            <TextBox Text="{Binding NewDentist.Name}" Height="20"></TextBox>
         </Grid>
-        <Grid DataContext="{Binding NewDentist}" Grid.Column="1" Grid.Row="1" >
-            <TextBox Text="{Binding Path=MiddleName}" Height="20"></TextBox>
+        <Grid Grid.Column="1" Grid.Row="1" >
+            <TextBox Text="{Binding NewDentist.MiddleName}" Height="20"></TextBox>
         </Grid>
-        <Grid DataContext="{Binding NewDentist}" Grid.Column="1" Grid.Row="2">
-            <TextBox Text="{Binding Path=LastName}" Height="20"></TextBox>
+        <Grid Grid.Column="1" Grid.Row="2">
+            <TextBox Text="{Binding NewDentist.LastName}" Height="20"></TextBox>
         </Grid>
-        <Grid DataContext="{Binding NewDentist}" Grid.Column="1" Grid.Row="3">
-            <TextBox Text="{Binding Path=Contact}" Height="20"></TextBox>
+        <Grid Grid.Column="1" Grid.Row="3">
+            <TextBox Text="{Binding NewDentist.Contact}" Height="20"></TextBox>
         </Grid>
-        <Grid DataContext="{Binding NewDentist}" Grid.Column="1" Grid.Row="4">
-            <TextBox Text="{Binding Path=ProfessionalExperience}" Height="20"></TextBox>
+        <Grid Grid.Column="1" Grid.Row="4">
+            <TextBox Text="{Binding NewDentist.ProfessionalExperience}" Height="20"></TextBox>
         </Grid>
 
 
         <Grid Grid.Column="2" Grid.Row="5">
-            <Button Content="AddDentist" Command="{Binding AddDentist}" Height="20" Width="70"/>
+            <Button Content="Add Dentist" Command="{Binding AddDentist}" Height="20" Width="90"/>
   
         </Grid>
 
