--- a/MDTManagment/MDTManagment/Views/Patients/AddPatientPage.xaml
+++ b/MDTManagment/MDTManagment/Views/Patients/AddPatientPage.xaml
@@ -49,7 +49,7 @@
             <TextBlock TextAlignment="Center" VerticalAlignment="Center">PhoneNumber:</TextBlock>
         </Grid>
         <Grid Grid.Column="0" Grid.Row="6">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center" TextWrapping="Wrap">Dentists of the Patient:</TextBlock>
+            <TextBlock TextAlignment="Center" VerticalAlignment="Center" TextWrapping="Wrap">Dentist of the Patient:</TextBlock>
         </Grid>
 
 
@@ -73,6 +73,7 @@
         </Grid>
         <Grid Grid.Column="1" Grid.Row="6" >
             <ComboBox
+                Height="20"
                 ItemsSource="{Binding Dentists}" 
                 SelectedValue="{Binding NewPatient.DentistId}"
                 SelectedValuePath="Id"
@@ -81,7 +82,7 @@
         </Grid>
    
         <Grid Grid.Column="2" Grid.Row="7">
-            <Button Content="AddPatient" Command="{Binding AddPatient}" Height="20" Width="70"/>    
+            <Button Content="Add Patient" Command="{Binding AddPatient}" Height="20" Width="90"/>    
         </Grid>
     </Grid>
 </Page>
