--- a/MDTManagment/MDTManagment/Views/Activities/AddActivityPage.xaml
+++ b/MDTManagment/MDTManagment/Views/Activities/AddActivityPage.xaml
@@ -30,7 +30,12 @@
             <TextBlock TextAlignment="Center" VerticalAlignment="Center">Price:</TextBlock>
         </Grid>
         <Grid Grid.Column="0" Grid.Row="2">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">EstimatedDate:</TextBlock>
+            <StackPanel VerticalAlignment="Center">
+                <TextBlock TextAlignment="Center" VerticalAlignment="Center" Margin="0,60,0,10" >EstimatedDate:</TextBlock>
+                <TextBlock TextAlignment="Center">*(mm/dd/yyyy)</TextBlock>
+                <TextBlock TextAlignment="Center">*(month/day/year)</TextBlock>
+                <TextBlock TextAlignment="Center">*(hours not required)</TextBlock>
+            </StackPanel>
         </Grid>
 
         
@@ -41,15 +46,16 @@
         <Grid Grid.Column="1" Grid.Row="1" >
             <TextBox Text="{Binding NewActivity.Price}" Height="20"></TextBox>
         </Grid>
-        <!--How should I made this? (its a dateTime prop)-->
         <Grid Grid.Column="1" Grid.Row="2">
             <TextBox Text="{Binding NewActivity.EstimatedDate}" Height="20"></TextBox>
         </Grid>
 
 
         <Grid Grid.Column="2" Grid.Row="3">
-            <Button Content="Add Activity" Command="{Binding AddActivity}" Height="20" Width="90"/>
-
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <Button Content="Add Activity" Command="{Binding AddActivity}" Height="20" Width="90"/>
+                <Button Content="Cancel" Command="{Binding NavigateToActivitiesPage}" Height="20" Width="90" Margin="20,0,0,0"/>
+            </StackPanel>
         </Grid>
 
 
