--- a/MDTManagment/MDTManagment/Views/Dentists/AddDentistPage.xaml
+++ b/MDTManagment/MDTManagment/Views/Dentists/AddDentistPage.xaml
@@ -61,8 +61,10 @@
 
 
         <Grid Grid.Column="2" Grid.Row="5">
-            <Button Content="Add Dentist" Command="{Binding AddDentist}" Height="20" Width="90"/>
-  
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <Button Content="Add Dentist" Command="{Binding AddDentist}" Height="20" Width="90"/>
+                <Button Content="Back" Command="{Binding NavigateToDentists}" Height="20" Width="90" Margin="20,0,0,0"/>
+            </StackPanel>
         </Grid>
 
 
