--- a/MDTManagment/MDTManagment/Views/Patients/AddPatientPage.xaml
+++ b/MDTManagment/MDTManagment/Views/Patients/AddPatientPage.xaml
@@ -80,9 +80,13 @@
                 DisplayMemberPath="Name">
             </ComboBox>
         </Grid>
-   
+
         <Grid Grid.Column="2" Grid.Row="7">
-            <Button Content="Add Patient" Command="{Binding AddPatient}" Height="20" Width="90"/>    
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <Button Content="Add Patient" Command="{Binding AddPatient}" Height="20" Width="90"/>
+                <Button Content="Abandon" Command="{Binding NavigateToPatientsPage}" Height="20" Width="90" Margin="20,0,0,0"/>
+            </StackPanel>
         </Grid>
+
     </Grid>
 </Page>
