--- a/MDTManagment/MDTManagment/Views/Patients/PatientsPage.xaml
+++ b/MDTManagment/MDTManagment/Views/Patients/PatientsPage.xaml
@@ -8,66 +8,216 @@
       d:DesignHeight="300" d:DesignWidth="300"
 	Title="PatientsPage">
 
-    <Grid>
-       
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition MinWidth="220"></ColumnDefinition>
-                        <ColumnDefinition></ColumnDefinition>
-                    </Grid.ColumnDefinitions>
+    <StackPanel>
 
-                    <Grid Grid.Column="0">
-                <ListView ItemsSource="{Binding Patients}" IsSynchronizedWithCurrentItem="True"  SelectedItem="{Binding SelectedPatient, Mode=TwoWay}">
-                    <ListView.View>
-                        <GridView>
-                            <GridView.Columns>
-                                <GridViewColumn Header="FirstName" DisplayMemberBinding="{Binding FirstName}"/>
-                                <GridViewColumn Header="Family" DisplayMemberBinding="{Binding Family}"/>
-                                <GridViewColumn Header="View">
-                                    <GridViewColumn.CellTemplate>
-                                        <DataTemplate>
-                                            <StackPanel>
-                                                <Button  Command="{Binding Path=DataContext.ViewPatientCommand, 
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="40"></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid Grid.Column="0" Grid.Row="0">
+                <!--<Button Width="40" Height="40" FontSize="15" Background="Transparent" BorderBrush="Transparent" Click="ExpandMenu_Click" RenderTransformOrigin="0.5,0.5">-->
+                <Button Click="ExpandMenu_Click" Margin="0,-3,1,0">
+
+                    <Button.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform ScaleY="-1"/>
+                            <SkewTransform/>
+                            <RotateTransform Angle="90"/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </Button.RenderTransform>
+                    <Button.Template>
+
+                        <ControlTemplate>
+                            <!--Content="|||"-->
+
+                            <ContentControl>
+                                <Border x:Name="ButtonBorder1" CornerRadius="0,0,0,0" BorderBrush="DeepSkyBlue" BorderThickness="3">
+                                    <StackPanel>
+                                        <TextBlock Height="30" Width="30" ><TextBlock Margin="7.8,3.2,0,0" FontSize="15" Text="|||" ></TextBlock></TextBlock>
+                                    </StackPanel>
+                                </Border>
+
+
+                            </ContentControl>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="Button.IsPressed" Value="True">
+                                    <Setter TargetName="ButtonBorder1" Property="BorderBrush" Value="DeepSkyBlue"></Setter>
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+            </Grid>
+
+            <Grid Grid.Column="1" Grid.Row="0" Height="30">
+                <StackPanel Orientation="Horizontal" Margin="130,0,0,0">
+                    <Button Height="30" Command="{Binding NavigateToAddPatient}" Background="Transparent" BorderBrush="Transparent">
+                        <StackPanel Orientation="Horizontal" Margin="10,0,15,0">
+                            <Image Height="30" VerticalAlignment="Center" Source="/Resources/avatar.png"></Image>
+                            <TextBlock FontSize="11.5" Text="Add Patient" VerticalAlignment="Center" Margin="5,0,0,0"></TextBlock>
+                        </StackPanel>
+                    </Button>
+                    <Button Height="30" Command="{Binding DeletePatient}" Background="Transparent" BorderBrush="Transparent">
+                        <StackPanel Orientation="Horizontal" Margin="10,0,15,0">
+                            <Image Height="30" VerticalAlignment="Center" Source="/Resources/try.png"></Image>
+                            <TextBlock FontSize="11.5" Text="Delete Patient" VerticalAlignment="Center" Margin="5,0,0,0"></TextBlock>
+                        </StackPanel>
+                    </Button>
+                </StackPanel>
+            </Grid>
+            
+            
+            
+        </Grid>
+
+        <Grid>
+            <GridSplitter Height="3" HorizontalAlignment="Stretch" Background="DeepSkyBlue"></GridSplitter>
+        </Grid>
+
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition MaxWidth="170" x:Name="MenuColumn"></ColumnDefinition>
+                <ColumnDefinition Width="3"></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition ></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid Grid.Column="0">
+                <StackPanel>
+                    <Button Command="{Binding NavToHome}" Background="Transparent" BorderBrush="Transparent" HorizontalContentAlignment="Left">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Margin="10,0,10,0" Height="25" Source="/Resources/avatar.png"></Image>
+                            <TextBlock FontSize="11.5" VerticalAlignment="Center">Home</TextBlock>
+                        </StackPanel>
+                    </Button>
+                    <Button Command="{Binding NavToPatients}" Background="Transparent" BorderBrush="Transparent" HorizontalContentAlignment="Left">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Margin="10,0,10,0" Height="25" Source="/Resources/avatar.png"></Image>
+                            <TextBlock FontSize="11.5" VerticalAlignment="Center">Patients</TextBlock>
+                        </StackPanel>
+                    </Button>
+                    <Button Command="{Binding NavToDentists}" Background="Transparent" BorderBrush="Transparent" HorizontalContentAlignment="Left">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Margin="10,0,10,0" Height="25" Source="/Resources/avatar.png"></Image>
+                            <TextBlock FontSize="11.5" VerticalAlignment="Center">Dentists</TextBlock>
+                        </StackPanel>
+                    </Button>
+                    <Button Command="{Binding NavToOrders}" Background="Transparent" BorderBrush="Transparent" HorizontalContentAlignment="Left" >
+                        <StackPanel Orientation="Horizontal">
+                            <Image Margin="10,0,10,0" Height="25" Source="/Resources/avatar.png"></Image>
+                            <TextBlock FontSize="11.5" VerticalAlignment="Center">Orders</TextBlock>
+                        </StackPanel>
+                    </Button>
+                    <Button Command="{Binding NavToActivities}" Background="Transparent" BorderBrush="Transparent" HorizontalContentAlignment="Left" >
+                        <StackPanel Orientation="Horizontal">
+                            <Image Margin="10,0,10,0" Height="25" Source="/Resources/try.png"></Image>
+                            <TextBlock FontSize="11.5" VerticalAlignment="Center">Activities</TextBlock>
+                        </StackPanel>
+                    </Button>
+                </StackPanel>
+
+            </Grid>
+
+
+            <GridSplitter x:Name="GridSplitter1" Grid.Column="1" HorizontalAlignment="Stretch" Background="DeepSkyBlue"></GridSplitter>
+
+
+
+
+
+            <Grid Grid.Column="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+
+                <Grid Grid.Column="0">
+                    <ListView ItemsSource="{Binding Patients}" IsSynchronizedWithCurrentItem="True"  SelectedItem="{Binding SelectedPatient, Mode=TwoWay}">
+                            <ListView.View>
+                                <GridView>
+                                    <GridView.Columns>
+                                        <GridViewColumn Header="FirstName" DisplayMemberBinding="{Binding FirstName}"/>
+                                        <GridViewColumn Header="Family" DisplayMemberBinding="{Binding Family}"/>
+                                        <GridViewColumn Header="View">
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <StackPanel>
+                                                        <Button  Command="{Binding Path=DataContext.ViewPatientCommand, 
                                                          RelativeSource={RelativeSource Mode=FindAncestor,      
                                                          AncestorType={x:Type ItemsControl}} }"
-                                                         CommandParameter="{Binding Id}"> Explicit </Button>
-                                            </StackPanel>
-                                        </DataTemplate>
-                                    </GridViewColumn.CellTemplate>
-                                </GridViewColumn>
-                                
-                         
-                            </GridView.Columns>
-                        </GridView>
-                    </ListView.View>
-                </ListView>
-                    </Grid>
+                                                         CommandParameter="{Binding Id}">Explicit</Button>
+                                                    </StackPanel>
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
 
 
-                    <Grid Grid.Column="1">
-                        
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition></RowDefinition>
-                                <RowDefinition Height="20"></RowDefinition>
-                                <RowDefinition></RowDefinition>
-                            </Grid.RowDefinitions>
-                            <Grid Grid.Row="0">
-                                <Button  Command="{Binding NavigateToAddPatient}" Height="50" Width="50" VerticalAlignment="Bottom">
-                                    <TextBlock TextWrapping="Wrap" TextAlignment="Center">Add Patient</TextBlock>
-                                </Button>
-                            </Grid>
-                            <Grid Grid.Row="2">
-                                <Button  Command="{Binding DeletePatient}" Height="50" Width="50" VerticalAlignment="Top">
-                                    <TextBlock TextWrapping="Wrap" TextAlignment="Center">Delete Patient</TextBlock>
-                                </Button>
-                            </Grid>
-                        </Grid>
-                       
-                    </Grid>
-
-
+                                    </GridView.Columns>
+                                </GridView>
+                            </ListView.View>
+                        </ListView>
                 </Grid>
 
-    </Grid>
+                <Grid Grid.Column="1">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="1*"></RowDefinition> <!--how to make this fit to window and not being cropped-->
+                            <RowDefinition MinHeight="800" Height="2*" AllowDrop="False"></RowDefinition>
+                        </Grid.RowDefinitions>
+                        <Grid Grid.Row="0">
+                            <Image Margin="10" Source="/Resources/try.png" ></Image>
+                        </Grid>
+                        <Grid Grid.Row="1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition></ColumnDefinition>
+                                <ColumnDefinition></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
+                            <Grid Grid.Column="0">
+                                <StackPanel>
+                                    <TextBlock HorizontalAlignment="Right" Text="Име:"></TextBlock>
+                                    <TextBlock HorizontalAlignment="Right" Text="Презиме:"></TextBlock>
+                                    <TextBlock HorizontalAlignment="Right" Text="Фамилия:"></TextBlock>
+                                    <TextBlock HorizontalAlignment="Right" Text="Възраст:"></TextBlock>
+                                    <TextBlock HorizontalAlignment="Right" Text="Адрес:"></TextBlock>
+                                    <TextBlock HorizontalAlignment="Right" Text="Контакт:"></TextBlock>
+                                    <TextBlock HorizontalAlignment="Right" Text="Зъботехник:"></TextBlock>
+                                    <TextBlock Text="---"></TextBlock>
+                                    <Button  Margin="0,0,10,0" HorizontalAlignment="Right" Content="Виж свързани поръчки:"></Button>
+                                </StackPanel>
+                            </Grid>
+                            <!--This grid grid.column1 is not workin a.k.a. the bindings arent displaying the SelectedPatient.neshtoSi :( .. -->
+                            <Grid Grid.Column="1">
+                                <StackPanel> <!--DataContext="{Binding SelectedPatient}"-->
+                                    <TextBlock Margin="10,0,0,0" Text="{Binding SelectedPatient.FirstName}">zashto we</TextBlock>
+                                    <TextBlock Margin="10,0,0,0" Text="{Binding SelectedPatient.Surname, Mode=TwoWay}"></TextBlock>
+                                    <TextBlock Margin="10,0,0,0" Text="{Binding SelectedPatient.Family, Mode=TwoWay}"></TextBlock>
+                                    <TextBlock Margin="10,0,0,0" Text="{Binding SelectedPatient.Age, Mode=TwoWay}"></TextBlock>
+                                    <TextBlock Margin="10,0,0,0" Text="{Binding SelectedPatient.Address, Mode=TwoWay}"></TextBlock>
+                                    <TextBlock Margin="10,0,0,0" Text="{Binding SelectedPatient.PhoneNumber, Mode=TwoWay}"></TextBlock>
+                                    <TextBlock Margin="10,0,0,0" Text="{Binding SelectedPatient.Dentist.Name, Mode=TwoWay}"></TextBlock>
+                                    <TextBlock Text="---"></TextBlock>
+                                    <Button Margin="30,0,0,0" HorizontalAlignment="Left" Content="Изтрий пациент:"></Button>
+                                </StackPanel>
+                            </Grid>
+                        </Grid>
+                    </Grid>
+                </Grid>
+
+
+            </Grid>
+
+
+
+        </Grid>
+
+
+    </StackPanel>
+
+
 </Page>
