--- a/MDTManagment/MDTManagment/Views/HomePage.xaml
+++ b/MDTManagment/MDTManagment/Views/HomePage.xaml
@@ -118,31 +118,31 @@
                 <StackPanel>
                     <Button Click="GoToHomePage_Cick" Background="Transparent" BorderBrush="Transparent" HorizontalContentAlignment="Left">
                         <StackPanel Orientation="Horizontal">
-                            <Image Margin="10,0,10,0" Height="25" Source="/Resources/avatar.png"></Image>
+                            <Image Margin="10,0,10,0" Height="25" Source="/Resources/0.png"></Image>
                             <TextBlock FontSize="11.5" VerticalAlignment="Center">Home</TextBlock>
                         </StackPanel>
                     </Button>
                     <Button Click="GoToPatientsPage_Cick" Background="Transparent" BorderBrush="Transparent" HorizontalContentAlignment="Left">
                         <StackPanel Orientation="Horizontal">
-                            <Image Margin="10,0,10,0" Height="25" Source="/Resources/avatar.png"></Image>
+                            <Image Margin="10,0,10,0" Height="25" Source="/Resources/1.png"></Image>
                             <TextBlock FontSize="11.5" VerticalAlignment="Center">Patients</TextBlock>
                         </StackPanel>
                     </Button>
                     <Button Click="GoToDentistsPage_Cick" Background="Transparent" BorderBrush="Transparent" HorizontalContentAlignment="Left">
                         <StackPanel Orientation="Horizontal">
-                            <Image Margin="10,0,10,0" Height="25" Source="/Resources/avatar.png"></Image>
+                            <Image Margin="10,0,10,0" Height="25" Source="/Resources/2.png"></Image>
                             <TextBlock FontSize="11.5" VerticalAlignment="Center">Dentists</TextBlock>
                         </StackPanel>
                     </Button>
                     <Button Click="GoToOrdersPage_Cick" Background="Transparent" BorderBrush="Transparent" HorizontalContentAlignment="Left" >
                         <StackPanel Orientation="Horizontal">
-                            <Image Margin="10,0,10,0" Height="25" Source="/Resources/avatar.png"></Image>
+                            <Image Margin="10,0,10,0" Height="25" Source="/Resources/3.png"></Image>
                             <TextBlock FontSize="11.5" VerticalAlignment="Center">Orders</TextBlock>
                         </StackPanel>
                     </Button>
                     <Button Click="GoToActivitiesPage_Cick" Background="Transparent" BorderBrush="Transparent" HorizontalContentAlignment="Left" >
                         <StackPanel Orientation="Horizontal">
-                            <Image Margin="10,0,10,0" Height="25" Source="/Resources/try.png"></Image>
+                            <Image Margin="10,0,10,0" Height="25" Source="/Resources/4.png"></Image>
                             <TextBlock FontSize="11.5" VerticalAlignment="Center">Activities</TextBlock>
                         </StackPanel>
                     </Button>
@@ -159,27 +159,12 @@
 
             <Grid Grid.Column="2">
 
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="50"></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="550"></ColumnDefinition>
                     <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
-                <StackPanel Grid.Column="0" Orientation="Horizontal">
-                    <Button Height="30" Width="160" Margin="10" Click="GoToPatientsPage_Cick">Patients</Button>
-                    <Button Height="30" Width="160" Margin="10" Click="GoToOrdersPage_Cick">Orders</Button>
-                    <Button Height="30" Width="160" Margin="10" Click="GoToDentistsPage_Cick">Dentists</Button>
-                </StackPanel>
-                <StackPanel Grid.Column="1" Height="300" Orientation="Horizontal">
-                    <TextBlock Text="MTDManagement" FontSize="30" Margin="550,10,10,10"></TextBlock>
-                </StackPanel>
-                <Image Source="/Resources/HomePageImage.png" Grid.Row="1" Width="600" Height="700" Grid.Column="1">
-
-                </Image>
-
-                <ListView ItemsSource="{Binding Orders}" Grid.Row="1">
+                
+                <ListView ItemsSource="{Binding Orders}" Grid.Column="0">
                     <ListView.ItemContainerStyle>
                         <Style TargetType="ListViewItem">
                             <Setter Property="Focusable" Value="False"/>
@@ -193,7 +178,7 @@
                     </ListView.ItemsPanel>
                     <ListView.ItemTemplate>
                         <DataTemplate>
-                            <controls:Tile Title="{Binding DeadLine}" Width="550"
+                            <controls:Tile Title="{Binding DeadLine}" Width="540"
                                    Command="{Binding Path=DataContext.ViewOrderCommand, 
                                                          RelativeSource={RelativeSource Mode=FindAncestor,      
                                                          AncestorType={x:Type ItemsControl}} }"
@@ -203,7 +188,21 @@
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
+                <Grid Grid.Column="1">
+                    <!--<Grid.RowDefinitions>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                    </Grid.RowDefinitions>-->
+                    <!--<Grid Grid.Row="0">-->
+                    <Image Source="/Resources/99logo.jpg" Height="500"></Image>
 
+                    <!--</Grid>-->
+                    <!--<Grid Grid.Row="1">-->
+                    <TextBlock FontFamily="Forte" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="DeepSkyBlue" Text="MDT Management" FontSize="30"></TextBlock>
+
+                    <!--</Grid>-->
+                    
+                </Grid>
 
             </Grid>
 
